syntax = "proto3";

package blog;

option go_package="../blogpb";


message Blog{
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}
message ReadBlogRequest{
   
    string blog_id = 1;
}

message ReadBlogResponse{
    Blog blog = 1;

}

message UpdateBlogResponse{
    Blog blog = 1;

}

message UpdateBlogRequest{
    Blog blog = 1;

}

message CreateBlogRequest{
    Blog blog = 1;
}

message CreateBlogResponse{
    Blog blog = 1;//will have a blog id
}
message DeleteBlogRequest{
    string blog_id  = 1;
}

message DeleteBlogResponse{
    bool success = 1;
}
message BlogListRequest{}

message BlogListResponse{
    repeated Blog blogs = 1;
}

service BlogService{
    rpc createBlog(CreateBlogRequest) returns(CreateBlogResponse);
    rpc ReadBlog(ReadBlogRequest) returns(ReadBlogResponse);
    rpc UpdateBlog(UpdateBlogRequest) returns(UpdateBlogResponse);
    rpc DeleteBlog(DeleteBlogRequest) returns(DeleteBlogResponse);
    rpc AllBlogs(BlogListRequest) returns(BlogListResponse);

}